# Telezon-S3

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  Procfile  README.es.md  README.md  docker-compose.dev.yaml  docker-compose.yaml  download_file.py  pyproject.toml  requirements.txt  setup_account_storage.py  setup_bot_storage.py  start_server.py  test_s3_methods.sh  upload_file.py  upload_file.sh
app/: main.py
app/api/: __init__.py
app/api/auth/: __init__.py  utils.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: blobs.py  buckets.py  users.py
app/core/: config.py  errors.py  jwt.py  security.py  token.py
app/crud/: blob.py  bucket.py  shortcuts.py  user.py
app/db/: mongodb.py
app/models/: blob.py  bucket.py  db_model.py  token.py  user.py
app/s3/: __init__.py  utils.py
app/s3/awssig/: __init__.py  exc.py  sigv4.py
app/storage/: __init__.py  storage.py
app/storage/telegram/: __init__.py  bot.py  telegram_account_storage.py  telegram_bot_storage.py
