[tool.poetry]
name = "telezons3"
version = "0.1.0"
description = ""
authors = ["Luis Correa <correaleyval@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
gunicorn = "^20.0.4"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
pydantic = {extras = ["email"], version = "^1.8.1"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
PyJWT = "^2.0.1"
python-dotenv = "^0.15.0"
motor = "^2.3.1"
python-telegram-bot = "^13.4.1"
python-multipart = "^0.0.5"
Pyrogram = "^1.1.13"
TgCrypto = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
